my cases and search cases page designs

--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-success.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-success.html
@@ -20,7 +20,7 @@
         </div>
 
         <p class="govuk-body">
-          Submission of the Cosmetic product notification is complete. Your product is now one of your notified cosmetic products.
+          Submission of the Cosmetic product notification is complete. Your product is now one of your <a href="#" class="govuk-link govuk-link--no-visited-state">notified cosmetic products</a>.
         </p>
 
         <div class="govuk-inset-text">
