--- a/app/views/psd-cases-area/index.html
+++ b/app/views/psd-cases-area/index.html
@@ -18,9 +18,7 @@
     li ul li i {
         font-size: 80%; 
     }
-    li i {
-        font-size: 60%; 
-    }
+
 
 
 </style>
@@ -55,7 +53,7 @@
                 1. My cases:
             </h2>
 
-            <p class="govuk-body">When the user selects the "Cases" option from the top level navigation, the user now lands on the "My cases" page. <small><i>(This can soon be revised with the addition of an actual Cases landing page).</i></small> The "Cases" active state remains active for all 3 pages. </p>
+            <p class="govuk-body">When the user selects the "Cases" option from the top level navigation, the user now lands on the "My cases" page. <small><i>(This can soon be revised with the addition of an actual Cases landing page).</i></small> The "Cases" active state remains active for all 3 pages. The list of open cases are automatically ordered by most recently created.</p>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
@@ -76,12 +74,19 @@
 
 
             <h2 class="govuk-heading-s">
-                3. All cases:
+                3. All cases - Search:
             </h2>  
             
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/all-cases.html" target="_blank">All cases</a>. This is the current Cases seach page (no change in functionality); updates have been made to the H1 title and 'help' link text and a main hint text added. <small><i>(Keywords moved to new row, margin/padding and input width classes changed, new ID "page-content" added to main section).</i></small>
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/all-cases-2.html" target="_blank">All cases - Search</a>. This is the current Cases seach page (no change in functionality); updates have been made to the H1 title and 'help' link text and a main hint text added. <small><i>(Keywords moved to new row, margin/padding and input width classes changed, new ID "page-content" added to main section).</i></small>
+
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/all-cases-2.html" target="_blank">All cases - Search: Alternative design</a>
+                        </li>
+                      
+                    </ul>
                 </li>
             </ul> 
 
