--- a/app/views/psd-cases-area/all-cases.html
+++ b/app/views/psd-cases-area/all-cases.html
@@ -52,16 +52,16 @@
 
 <form id="cases-search-form" action="/cases/search" role="search" accept-charset="UTF-8" novalidate>
 
-    <div class="govuk-grid-row opss-full-height govuk-!-margin-top-4 govuk-!-padding-top-9">
+    <div class="govuk-grid-row opss-full-height govuk-!-padding-top-9">
 
         <!--XXXXXXXXXX filters section starts XXXXXXXXXXX -->
         <section class="govuk-grid-column-one-quarter govuk-!-padding-right-1 opss-full-height__col">
 
+            <a href="#page-content" class="govuk-skip-link opss-skip-link">
+                Skip to the main content
+            </a>
+
             <nav aria-label="Secondary">
-                <a href="#page-content" class="govuk-skip-link opss-skip-link">
-                    Skip to the main content
-                </a>
-        
                 <ul class="govuk-list opss-left-nav">
                     <li>
                         <a href="/psd-cases-area/my-cases.html" class="govuk-link govuk-link--no-visited-state">My cases</a>
@@ -70,7 +70,7 @@
                         <a href="/psd-cases-area/team-cases.html" class="govuk-link govuk-link--no-visited-state">Team cases</a>
                     </li>
                     <li class="opss-left-nav__active">
-                        <a href="/psd-cases-area/all-cases.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">All cases &ndash; Search</a>
+                        <a href="/psd-cases-area/all-cases-2.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">All cases &ndash; Search</a>
                     </li>
                 </ul>
             </nav>
