--- a/app/views/psd-cases-area/my-cases copy.html
+++ b/app/views/psd-cases-area/my-cases copy.html
@@ -15,7 +15,7 @@
         </h1>
 
         <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-1">
-            You are the case owner of 23 open cases.
+            You are the case owner of these open cases.
         </p>
 
     </div>
@@ -50,6 +50,12 @@
             </ul>
         </nav>
 
+        <div class="govuk-!-padding-top-2 govuk-!-padding-right-0 govuk-!-padding-bottom-1 govuk-!-padding-left-3 govuk-!-margin-bottom-3 opss-desktop-margin-bottom-220px opss-full-height__col--bottom opss-right-box-arrow">
+            <p class="govuk-body govuk-!-padding-bottom-1 govuk-!-margin-bottom-0 govuk-!-font-size-14">
+                Request this list as a downloadable <br class="opss-br-desktop"><a href="/psd-general/cases-page-banner" class="govuk-link govuk-link--no-visited-state"><abbr title="Microsoft Excel Open XML Format Spreadsheet">XLSX</abbr> (spreadsheet)</a> file.
+            </p>
+        </div>        
+
     </section>
 
     <section class="govuk-grid-column-three-quarters" id="page-content">
@@ -65,7 +71,7 @@
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">&nbsp;</th>
                             <th id="allegation" scope="col" class="govuk-table__header">Case number</th>
-                            <th id="casecreated" scope="col" class="govuk-table__header">Case created</th>
+                            <th id="caseowner" scope="col" class="govuk-table__header">Case owner</th>
                             <th id="updated" scope="col" class="govuk-table__header">Updated</th>
                         </tr>
                     </thead>
@@ -85,8 +91,8 @@
                             <td headers="allegation item-1 meta-1" class="govuk-table__cell">
                                 2021-11
                             </td>
-                            <td headers="casecreated item-1 meta-1" class="govuk-table__cell">
-                                6 January 2022
+                            <td headers="caseowner item-1 meta-1" class="govuk-table__cell">
+                                David Willis
                             </td>
                             <td headers="updated item-1 meta-1" class="govuk-table__cell">
                                 about 6 hours ago
@@ -122,8 +128,8 @@
                             <td headers="allegation item-2 meta-2" class="govuk-table__cell">
                                 20-2120
                             </td>
-                            <td headers="casecreated item-2 meta-2" class="govuk-table__cell">
-                                18 December 2021
+                            <td headers="caseowner item-2 meta-2" class="govuk-table__cell">
+                                OPSS Enforcement
                             </td>
                             <td headers="updated item-2 meta-2" class="govuk-table__cell">
                                 about 2 months ago
@@ -157,8 +163,8 @@
                             <td headers="allegation item-3 meta-3" class="govuk-table__cell">
                                 2104-21000
                             </td>
-                            <td headers="casecreated item-3 meta-3" class="govuk-table__cell">
-                                2 December 2021
+                            <td headers="caseowner item-3 meta-3" class="govuk-table__cell">
+                                Renfrewshire Council
                             </td>
                             <td headers="updated item-3 meta-3" class="govuk-table__cell">
                                 21 days ago
@@ -190,8 +196,8 @@
                             <td headers="allegation item-4 meta-4" class="govuk-table__cell">
                                 2007-37001
                             </td>
-                            <td headers="casecreated item-4 meta-4" class="govuk-table__cell">
-                                30 November 2021
+                            <td headers="caseowner item-4 meta-4" class="govuk-table__cell">
+                                Toby Huges
                             </td>
                             <td headers="updated item-4 meta-4" class="govuk-table__cell">
                                 3 months ago
@@ -223,8 +229,8 @@
                             <td headers="allegation item-5 meta-5" class="govuk-table__cell">
                                 1007-27002
                             </td>
-                            <td headers="casecreated item-5 meta-5" class="govuk-table__cell">
-                                11 November 2021
+                            <td headers="caseowner item-5 meta-5" class="govuk-table__cell">
+                                Birmingham Trading Standards
                             </td>
                             <td headers="updated item-5 meta-5" class="govuk-table__cell">
                                 6 months ago
@@ -256,8 +262,8 @@
                             <td headers="allegation item-6 meta-6" class="govuk-table__cell">
                                 45001-70000
                             </td>
-                            <td headers="casecreated item-6 meta-6" class="govuk-table__cell">
-                                23 October 2021
+                            <td headers="caseowner item-6 meta-6" class="govuk-table__cell">
+                                Gary Harrison
                             </td>
                             <td headers="updated item-6 meta-6" class="govuk-table__cell">
                                 4 months ago
@@ -291,8 +297,8 @@
                             <td headers="allegation item-7 meta-7" class="govuk-table__cell">
                                 25022-21010
                             </td>
-                            <td headers="casecreated item-7 meta-7" class="govuk-table__cell">
-                                15 October 2021
+                            <td headers="caseowner item-7 meta-7" class="govuk-table__cell">
+                                Greater London authority
                             </td>
                             <td headers="updated item-7 meta-7" class="govuk-table__cell">
                                 about 3 months ago
@@ -324,8 +330,8 @@
                             <td headers="allegation item-8 meta-8" class="govuk-table__cell">
                                 2221-70003
                             </td>
-                            <td headers="casecreated item-8 meta-8" class="govuk-table__cell">
-                                11 October 2021
+                            <td headers="caseowner item-8 meta-8" class="govuk-table__cell">
+                                Flintshire Council
                             </td>
                             <td headers="updated item-8 meta-8" class="govuk-table__cell">
                                 about 7 months ago
@@ -357,8 +363,8 @@
                             <td headers="allegation item-9 meta-9" class="govuk-table__cell">
                                 21-23341
                             </td>
-                            <td headers="casecreated item-9 meta-9" class="govuk-table__cell">
-                                2 September 2021
+                            <td headers="caseowner item-9 meta-9" class="govuk-table__cell">
+                                Ian Weatherby-Blyth
                             </td>
                             <td headers="updated item-9 meta-9" class="govuk-table__cell">
                                 2 weeks ago
@@ -394,8 +400,8 @@
                             <td headers="allegation item-10 meta-10" class="govuk-table__cell">
                                 2021-11
                             </td>
-                            <td headers="casecreated item-10 meta-10" class="govuk-table__cell">
-                                18 August 2021
+                            <td headers="caseowner item-10 meta-10" class="govuk-table__cell">
+                                David Willis
                             </td>
                             <td headers="updated item-10 meta-10" class="govuk-table__cell">
                                 about 6 hours ago
@@ -431,8 +437,8 @@
                             <td headers="allegation item-11 meta-11" class="govuk-table__cell">
                                 20-2120
                             </td>
-                            <td headers="casecreated item-11 meta-11" class="govuk-table__cell">
-                                13 August 2021
+                            <td headers="caseowner item-11 meta-11" class="govuk-table__cell">
+                                OPSS Enforcement
                             </td>
                             <td headers="updated item-11 meta-11" class="govuk-table__cell">
                                 about 2 months ago
@@ -466,8 +472,8 @@
                             <td headers="allegation item-12 meta-12" class="govuk-table__cell">
                                 2104-21000
                             </td>
-                            <td headers="casecreated item-12 meta-12" class="govuk-table__cell">
-                                1 July 2021
+                            <td headers="caseowner item-12 meta-12" class="govuk-table__cell">
+                                Renfrewshire Council
                             </td>
                             <td headers="updated item-12 meta-12" class="govuk-table__cell">
                                 21 days ago
@@ -499,8 +505,8 @@
                             <td headers="allegation item-13 meta-13" class="govuk-table__cell">
                                 2007-37001
                             </td>
-                            <td headers="casecreated item-13 meta-13" class="govuk-table__cell">
-                                15 June 2021
+                            <td headers="caseowner item-13 meta-13" class="govuk-table__cell">
+                                Toby Huges
                             </td>
                             <td headers="updated item-13 meta-13" class="govuk-table__cell">
                                 3 months ago
@@ -532,8 +538,8 @@
                             <td headers="allegation item-14 meta-14" class="govuk-table__cell">
                                 1007-27002
                             </td>
-                            <td headers="casecreated item-14 meta-14" class="govuk-table__cell">
-                                11 June 2021
+                            <td headers="caseowner item-14 meta-14" class="govuk-table__cell">
+                                Birmingham Trading Standards
                             </td>
                             <td headers="updated item-14 meta-14" class="govuk-table__cell">
                                 6 months ago
@@ -565,8 +571,8 @@
                             <td headers="allegation item-15 meta-15" class="govuk-table__cell">
                                 45001-70000
                             </td>
-                            <td headers="casecreated item-15 meta-15" class="govuk-table__cell">
-                                24 May 2021
+                            <td headers="caseowner item-15 meta-15" class="govuk-table__cell">
+                                Gary Harrison
                             </td>
                             <td headers="updated item-15 meta-15" class="govuk-table__cell">
                                 4 months ago
@@ -600,8 +606,8 @@
                             <td headers="allegation item-16 meta-16" class="govuk-table__cell">
                                 25022-21010
                             </td>
-                            <td headers="casecreated item-16 meta-16" class="govuk-table__cell">
-                                14 May 2021
+                            <td headers="caseowner item-16 meta-16" class="govuk-table__cell">
+                                Greater London authority
                             </td>
                             <td headers="updated item-16 meta-16" class="govuk-table__cell">
                                 about 3 months ago
@@ -633,8 +639,8 @@
                             <td headers="allegation item-17 meta-17" class="govuk-table__cell">
                                 2221-70003
                             </td>
-                            <td headers="casecreated item-17 meta-17" class="govuk-table__cell">
-                                7 April 2021
+                            <td headers="caseowner item-17 meta-17" class="govuk-table__cell">
+                                Flintshire Council
                             </td>
                             <td headers="updated item-17 meta-17" class="govuk-table__cell">
                                 about 7 months ago
@@ -666,8 +672,8 @@
                             <td headers="allegation item-18 meta-18" class="govuk-table__cell">
                                 21-23341
                             </td>
-                            <td headers="casecreated item-18 meta-18" class="govuk-table__cell">
-                                28 March 2021
+                            <td headers="caseowner item-18 meta-18" class="govuk-table__cell">
+                                Ian Weatherby-Blyth
                             </td>
                             <td headers="updated item-18 meta-18" class="govuk-table__cell">
                                 2 weeks ago
@@ -701,8 +707,8 @@
                             <td headers="allegation item-19 meta-19" class="govuk-table__cell">
                                 21-23341
                             </td>
-                            <td headers="casecreated item-19 meta-19" class="govuk-table__cell">
-                                3 March 2021
+                            <td headers="caseowner item-19 meta-19" class="govuk-table__cell">
+                                Dave Brown
                             </td>
                             <td headers="updated item-19 meta-19" class="govuk-table__cell">
                                 2 weeks ago
@@ -714,6 +720,7 @@
                             </th>
                             <td headers="item-19 status-19" colspan="3" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
+
                             </td>
                         </tr>
                     </tbody>
@@ -734,8 +741,8 @@
                             <td headers="allegation item-20 meta-20" class="govuk-table__cell">
                                 21-23341
                             </td>
-                            <td headers="casecreated item-20 meta-20" class="govuk-table__cell">
-                                4 February 2021
+                            <td headers="caseowner item-20 meta-20" class="govuk-table__cell">
+                                Ian Weatherby-Blyth
                             </td>
                             <td headers="updated item-20 meta-20" class="govuk-table__cell">
                                 2 weeks ago
@@ -759,7 +766,7 @@
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">&nbsp;</th>
                             <th scope="col" class="govuk-table__header">Case number</th>
-                            <th scope="col" class="govuk-table__header">Case created</th>
+                            <th scope="col" class="govuk-table__header">Case owner</th>
                             <th scope="col" class="govuk-table__header">Updated</th>
                         </tr>
                     </tfoot>
